# sonal-verto-fetch

./: .gitignore  README.md  example_output.txt  example_response.json  get_available_slots.py  last-run.json  pyproject.toml
data/: 2021-30-04_21-28-05.json  last-run.json
