[tool.poetry]
name = "verto-api-monitoring"
version = "0.1.0"
description = ""
authors = ["Sonal Ranjit <sonal.ranjit3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
